[gd_scene load_steps=2 format=3 uid="uid://bywl56lagicgd"]

[ext_resource type="Script" path="res://deletefiles.gd" id="1_nia88"]

[node name="manage" type="Node2D"]
script = ExtResource("1_nia88")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 430.0
offset_top = 283.0
offset_right = 830.0
offset_bottom = 384.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Delete Slot 1"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Delete Slot 2"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Delete Slot 3"

[node name="Button4" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back
"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="VBoxContainer/Button4" to="." method="_on_button_4_pressed"]
